--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.2",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +22,7 @@
     "next": "16.0.7",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "openai": "^6.10.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
