--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
+    "xss": "^1.0.15",
     "zod": "^4.1.13"
   },
   "devDependencies": {
