--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
-    "next-themes": "^0.4.6",
-    "openai": "^6.10.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "14.2.16",
+    "next-themes": "^0.3.0",
+    "openai": "^4.71.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "uuid": "^13.0.0",
-    "vaul": "^1.1.2",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.4",
+    "uuid": "^10.0.0",
+    "vaul": "^0.9.1",
     "xss": "^1.0.15",
-    "zod": "^4.1.13"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
