--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.556.0",
     "next": "14.2.16",
     "next-themes": "^0.3.0",
