--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "resend": "^6.6.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "uuid": "^10.0.0",
