Realtime online/offline update on chat-manager

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.556.0",
-    "next": "14.2.16",
+    "next": "^14.2.35",
     "next-themes": "^0.3.0",
     "openai": "^4.71.0",
     "react": "^18.3.1",
