--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "recharts": "^3.6.0",
     "resend": "^6.6.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
