--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.556.0",
+    "motion": "^12.23.26",
     "next": "^14.2.35",
     "next-themes": "^0.3.0",
     "openai": "^4.71.0",
