--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 public/newlanding_ios.mov filter=lfs diff=lfs merge=lfs -text
 public/botloading_ios.mov filter=lfs diff=lfs merge=lfs -text
-public/boatloading.mov filter=lfs diff=lfs merge=lfs -text
-public/boatloading_ios.mov filter=lfs diff=lfs merge=lfs -text
+public/botloading_ios_1.mov filter=lfs diff=lfs merge=lfs -text
