--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "redirects": [
-    {
-      "source": "/:path*",
-      "has": [
-        {
-          "type": "host",
-          "value": "www.filheinzrelatorre.com"
-        }
-      ],
-      "destination": "https://filheinzrelatorre.com/:path*",
-      "permanent": true
-    }
-  ]
+  "buildCommand": "npm run build"
 }
